--- a/.github/workflows/Archive.yml
+++ b/.github/workflows/Archive.yml
@@ -13,6 +13,9 @@ jobs:
     name: Export iPa
     runs-on: macos-latest
     steps:
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '13.0'
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install the Apple certificate and provisioning profile
